<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Survey1Fragment">

    <!-- question 1 -->
    <TextView
        android:id="@+id/q1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tags_allergy"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/survey_q1"
        android:textColor="@color/black"
        android:textSize="22sp"/>

    <!-- tag of food for skip to next line -->
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tags_allergy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:chipSpacingHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/q1">

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_egg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_egg"
            android:textSize="16sp"
            app:chipIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_milk"
            android:textSize="16sp"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_buckwheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_buckwheat"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_peanut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_peanut"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_soybean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_soybean"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_wheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_wheat"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_mackerel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_mackerel"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_crab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_crab"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_shrimp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_shrimp"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_pig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_pig"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_peach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_peach"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_dioxide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_dioxide"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_walnut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_walnut"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_chicken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_chicken"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_tomato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_tomato"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_cow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_cow"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_squid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_squid"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_seashell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/allergy_seashell"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_oyster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_oyster"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allergy_pinenut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/allergy_pinenut"
            android:textSize="16sp"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/n_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle"
            android:text="@string/n_a"
            android:textSize="16sp" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>