<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="24dp"
    android:paddingHorizontal="24dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EditNoticedTitle"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_bold" />

    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/EditNoticedMessage"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_medium" />

    <CheckBox
        android:id="@+id/cb1Month"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/Noticed1Month"/>
</LinearLayout>