<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/set_profile_img"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_bold" />

    <TextView
        android:id="@+id/btn_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:text="@string/set_img_default"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_regular" />

    <TextView
        android:id="@+id/btn_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:text="@string/set_img_gallery"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_regular" />
</LinearLayout>