<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.Survey3Fragment">

    <TextView
        android:id="@+id/q3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tags_diet"
        android:layout_marginVertical="20dp"
        android:text="@string/survey_q3"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:fontFamily="@font/pretendard_bold"/>

    <!-- 선택지 -->
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tags_diet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:chipSpacingHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/q3">

        <com.google.android.material.chip.Chip
            android:id="@+id/diet_korean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle_Short"
            app:chipIcon="@drawable/ic_korea"
            app:chipIconVisible="true"
            android:text="@string/diet_korean"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/diet_chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle_Short"
            app:chipIcon="@drawable/ic_china"
            app:chipIconVisible="true"
            android:text="@string/diet_chinese"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/diet_japanese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle_Short"
            app:chipIcon="@drawable/ic_japan"
            app:chipIconVisible="true"
            android:text="@string/diet_japanese"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/diet_western"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle_Short"
            app:chipIcon="@drawable/ic_us"
            app:chipIconVisible="true"
            android:text="@string/diet_western"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/dessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle_Short"
            app:chipIcon="@drawable/ic_cake"
            app:chipIconVisible="true"
            android:text="@string/dessert"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/beverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle_Short"
            app:chipIcon="@drawable/ic_tea"
            app:chipIconVisible="true"
            android:text="@string/beverage"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sauce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle_Short"
            app:chipIcon="@drawable/ic_sauce"
            app:chipIconVisible="true"
            android:text="@string/sauce"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/diet_n_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChipStyle_Short"
            app:chipIcon="@drawable/ic_x"
            app:chipIconTint="@color/selector_chip_ic"
            app:chipIconVisible="true"
            android:text="@string/diet_n_a"
            android:textSize="16sp" />
    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>