<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signup.Survey2Fragment">

    <!-- question 2 -->
    <TextView
        android:id="@+id/q2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/select_diet"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/survey_q2"
        android:textColor="@color/black"
        android:textSize="22sp"/>

    <RadioGroup
        android:id="@+id/select_diet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/q2"
        app:layout_constraintBottom_toBottomOf="parent">
        <RadioButton
            android:id="@+id/diet_meat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="20dp"
            android:button="@null"
            android:text="@string/diet_meat"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/pretendard_regular" />

        <RadioButton
            android:id="@+id/diet_vegetable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="20dp"
            android:button="@null"
            android:text="@string/diet_vegetable"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/pretendard_regular"/>

        <RadioButton
            android:id="@+id/diet_meat_vegetable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="20dp"
            android:button="@null"
            android:text="@string/diet_meat_vegetable"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/pretendard_regular"/>

        <RadioButton
            android:id="@+id/diet_nothing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="20dp"
            android:button="@null"
            android:text="@string/diet_noting"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/pretendard_regular"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>