<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_marginBottom="10dp">
    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile"
        android:clipToOutline="true"
        android:background="@drawable/bg_oval_filled_transparency"
        tools:ignore="ContentDescription,UnusedAttribute"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginStart="8dp">
        <TextView
            android:id="@+id/tvMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_title"
            android:textColor="@color/elixir_orange"
            android:textSize="14sp"
            android:fontFamily="@font/pretendard_medium"/>
        <TextView
            android:id="@+id/tvNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_nickname"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/pretendard_bold"/>
    </LinearLayout>
    <android.widget.Button
        android:id="@+id/btnFollow"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:background="@drawable/bg_rect_filled_orange"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/follow"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:fontFamily="@font/pretendard_medium" />
</LinearLayout>